2008-04-22  Matthew Barnes  <mbarnes@redhat.com>

	** Fixes bug #494171

	* mail-send-recv.c (build_dialog):
	Make the "Send & Receive Mail" window dimensions persistent.

	* evolution-mail.schemas.in:
	Add keys for storing "Send & Receive Mail" window dimensions:
		/apps/evolution/mail/send_recv_height
		/apps/evolution/mail/send_recv_maximized
		/apps/evolution/mail/send_recv_width
	Note the "maximized" key is required by GConfBridge but is not
	actually used since the window cannot be maximized.

2008-04-22  Matthew Barnes  <mbarnes@redhat.com>

	* em-composer-prefs.c:
	gconf-bridge.h moved to e-util.

2008-04-21  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #323402

	* em-folder-tree.c: (folder_tree_new):
	* evolution-mail.schemas.in: Be able to disable ellipsizing of folder
	names with hidden option /apps/evolution/mail/display/no_folder_dots.

2008-04-20  Srinivasa Ragavan  <sragavan@novell.com>

	** Fix for bug #334444

	* em-format-html-display.c: (efhd_attachment_button),
	(efhd_update_bar), (efhd_message_update_bar),
	(efhd_message_add_bar):
	* em-format-html.c: (efh_format_exec):

2008-04-17  Milan Crha  <mcrha@redhat.com>

	** Part of fix for bug #526739

	* Makefile.am:
	* em-vfs-stream.h:
	* em-vfs-stream.c: Removed from project, not used anywhere.
	* em-menu.c:
	* em-config.c: Do not include gnome-vfs.
	* mail-ops.c: (save_messages_exec), (save_part_exec):
	Changes related to Data Server change of CamelStreamVFS.
	* em-format.c: (em_format_describe_part):
	* em-format-html-display.c: (efhd_bonobo_object), (efhd_find_handler),
	(efhd_use_component), (efhd_bonobo_unknown), (efhd_check_server_prop),
	(efhd_format_attachment): Drop use of deprecated gnome-vfs functions.
	* em-utils.c: (em_utils_snoop_type): Use gio to guess the mime_type.
	* em-popup.c: (emp_apps_open_in), (emp_apps_popup_free),
	(emp_standard_menu_factory): Use gio to fill popup and launch app.

2008-04-16  Shuai Liu  <shuai.liu@sun.com>

	** Fix for bug #528358
